@@ -81,7 +81,7 @@ define( function( require ) {
 
     // private: Add solute from the dropper
     addSolute: function( deltaSeconds ) {
-      var deltaVolume = this.dropper.flowRateProperty.get() * deltaSeconds;
+      var deltaVolume = Math.min( this.dropper.flowRateProperty.get() * deltaSeconds, this.solution.getFreeVolume() );
       if ( deltaVolume > 0 ) {
         this.solution.soluteVolumeProperty.set( this.solution.soluteVolumeProperty.get() + deltaVolume );
       }
@@ -89,7 +89,7 @@ define( function( require ) {
 
     // private: Add solvent from the input faucet
     addSolvent: function( deltaSeconds ) {
-      var deltaVolume = this.solventFaucet.flowRateProperty.get() * deltaSeconds;
+      var deltaVolume = Math.min( this.solventFaucet.flowRateProperty.get() * deltaSeconds, this.solution.getFreeVolume() );
       if ( deltaVolume > 0 ) {
         this.solution.solventVolumeProperty.set( this.solution.solventVolumeProperty.get() + deltaVolume );
       }
